# split-wiser

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
resources/: development.ini
src/: settings.py  wsgi.py
src/models/: __init__.py  expense.py  friend.py  friends.py  friends_expense.py  group.py  group_friend.py  group_friends.py  groups.py  item.py  token.py  tokens.py  user.py  users.py
src/routes/: __init__.py
src/routes/api/: __init__.py
src/routes/api/v1/: __init__.py  expense.py  friend.py  friends.py  group.py  group_friends.py  groups.py  token.py  tokens.py  user.py  users.py
src/schemas/: __init__.py  expense_schema.py  friend_expense_schema.py  friend_schema.py  group_friends_schema.py  groups_schema.py  item.py  token_schema.py  tokens_schema.py  user_schema.py  users_schema.py
src/utilities/: __init__.py  authentication.py  viewsets.py
src/views/: __init__.py  expense.py  friends.py  group_friends.py  groups.py  token.py  tokens.py  users.py
