[tool.poetry]
name = "split-wiser"
version = "0.1.0"
description = "Manage your shared expenses with this application."
authors = ["Amogh Madan <amogh.madan@acsicorp.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "split_wiser"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
marshmallow-sqlalchemy = "^0.28.1"
flask-marshmallow = "^0.14.0"
Flask-Migrate = "^3.1.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
